--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
             - 81:80
         volumes:
             - ./:/var/www
+            - /var/www/var
             - /var/www/vendor
         depends_on:
             - mysql
