Paginacja itemów na pierwszej stronie

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Fakera można odpalić tylko na devie!
 
-APP_ENV=dev
+APP_ENV=build
 APP_SECRET=79043f703991322eef8e0e9c9716fba6
 DATABASE_URL=mysql://root:qwerty@mysql:3306/cms?serverVersion=5.7
 MAILER_DSN=smtp://:@mail:25
